[tool.poetry]
name = "marvelous-yeti"
version = "0.1.0"
description = ""
authors = ["Romain Gehrig <romain.gehrig@gmail.com>"]
readme = "README.md"
packages = [{include = "my"}]

[tool.poetry.scripts]
my = "my.main:main"

[tool.poetry.dependencies]
python = "^3.10"
importlib-metadata = {version = "^5.0.0", python = "<3.10"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
ipdb = "^0.13.9"
coverage = "^6.5.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-magic-trailing-comma = true
target-version = ['py38', 'py39', 'py310']
